# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]
#
## [0.8] - 2021-05-24

### Added
 - COT messages that fail to parse are logged

### Changed
 - Data packages marked private do not show up in search listings
 - New data packages are assumed private until the client specifies public

### Fixed
 - Improvements for Windows compatibility
 - Send the detail as received from the user
 - Use restart for systemd scripts
 - Correct the path for the DPS outside of systemd
 - Stale SSL sockets and the persistence dare are occasionally pruned

### Contributors
 - Thanks to @doug-fitzmaurice-rowden for submitting the client certificate
   support for the data package server, and helping test the release!

## [0.7.1] - 2021-03-07

### Changed
 - Removed dependency on dataclasses (to keep python 3.6 support)

## [0.7] - 2021-03-05
The system administrator's release, aimed at easing deployment of taky, and
improving CI. Officially moving from alpha to beta!

### Added
 - takyctl can now generate systemd scripts
 - dps now supports video URL endpoints
 - Object persistence with optional redis backend!
 - Preliminary unit testing

### Changed
 - Greater resillience to malformed COT messages
 - Added some unit tests and GitHub automation
 - Code structure and documentation improvements

### Fixed
 - Corrected the DPS url for client->client transfers

## [0.6] - 2021-02-26
The single threaded release! Huge fix for the SSL deadlock! The first really
usable release.

### Added
 - Optional flag to allows pdb to attach to the COT server
 - takyctl can optionally export the .crt/.key files for key generation

### Changed
 - Code is now single threaded

### Fixed
 - SSL handshake deadlock

## [0.5.3] - 2021-02-18
### Added