@@ -1,3 +1,4 @@
 from .build_client_cmd import build_client, build_client_reg
 from .setup_taky_cmd import setup_taky, setup_taky_reg
 from .systemd_cmd import systemd, systemd_reg
+from .status_cmd import status, status_reg
