@@ -5,7 +5,10 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
 ## [Unreleased]
-#
+
+### Added
+ - Management socket + status command
+
 ## [0.8] - 2021-05-24
 
 ### Added
